added dialog box to get sizes for insert shapes/images